# ckb-types-go

./: .gitignore  Makefile  README.md  ckb_ffi.h  jsonrpc_types.yml  types.yml
.github/workflows/: go.yml
ckb_ffi/: Cargo.toml
ckb_ffi/src/: conv.rs  error.rs  lib.rs
jsonrpc/native/types/: blockchain.go  serialize.go  serialize_blockchain.go  serialize_test.go
jsonrpc/types/: blockchain.go  buf_ffi.go  cgo_helpers.go  cgo_helpers.h  codec.go  codec_ffi.go  codec_test.go  const.go  serialize.go  serialize_blockchain.go  utils.go
types/: blockchain.go  buf_ffi.go  cgo_helpers.go  cgo_helpers.h  codec.go  codec_ffi.go  codec_test.go  const.go  utils.go
