[package]
name = "ckb_ffi"
version = "0.1.0"
authors = ["zeor.qn <zero.qn@outlook.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[dependencies]
libc = { version = "0.2", default-features = false }
derive_more = "0.15"
molecule = "0.4"
serde_json = "1.0"
ckb-types = { git = "https://github.com/nervosnetwork/ckb.git", tag = "v0.23.0" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb.git", tag = "v0.23.0" }
